--- a/atcrowdfunding-manager-impl/pom.xml
+++ b/atcrowdfunding-manager-impl/pom.xml
@@ -23,5 +23,10 @@
             <artifactId>atcrowdfunding-common</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 </project>
