--- a/atcrowdfunding-main/pom.xml
+++ b/atcrowdfunding-main/pom.xml
@@ -29,6 +29,14 @@
             <artifactId>atcrowdfunding-potal-impl</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
+
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
